# SCUDEM-Populations

./: .ccls  .clang-format  CMakeLists.txt  README.md  SCUDEM Presentation.pptx  script.txt  ~$SCUDEM Presentation.pptx
Release/: CMakeCache.txt  Makefile  Project  cmake_install.cmake
Release/libraries/MyLibrary/: Makefile  cmake_install.cmake
libraries/MyLibrary/: CMakeLists.txt
src/: main.cpp
src/generators/: ImmigrantGenerator.cpp  ImmigrantGenerator.h  PersonGenerator.cpp  PersonGenerator.h
src/models/: Immigrant.cpp  Immigrant.h
src/models/parent/: person.cpp  person.h
src/templates/: rng.cpp
